// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbCodesMap bbCodesMap.b should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "bold style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.br should match expected snapshot 1`] = `Object {}`;

exports[`bbCodesMap bbCodesMap.center should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "center style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.code with should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "id": 0,
  "options": "some options",
}
`;

exports[`bbCodesMap bbCodesMap.color should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "options": "red",
}
`;

exports[`bbCodesMap bbCodesMap.i should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "italic style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.left should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "left style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.li should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.offtopic should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.ol should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.p should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.quote with should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "options": "some options",
}
`;

exports[`bbCodesMap bbCodesMap.right should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "right style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.root should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.s should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "lineThrough style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.size with size equal 16 px should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "",
  "styleObject": Object {
    "fontSize": "1rem",
  },
}
`;

exports[`bbCodesMap bbCodesMap.size with size less then 16 px should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "",
  "styleObject": Object {
    "fontSize": "0.625rem",
  },
}
`;

exports[`bbCodesMap bbCodesMap.size with size more then 16 px should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "",
  "styleObject": Object {
    "fontSize": "1.25rem",
  },
}
`;

exports[`bbCodesMap bbCodesMap.size without size should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "",
  "styleObject": Object {
    "fontSize": "1rem",
  },
}
`;

exports[`bbCodesMap bbCodesMap.spoiler with should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "options": "some options",
}
`;

exports[`bbCodesMap bbCodesMap.textline should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.think should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMap.u should match expected snapshot 1`] = `
Object {
  "children": "some text",
  "className": "underline style",
  "styleObject": Object {},
}
`;

exports[`bbCodesMap bbCodesMap.ul should match expected snapshot 1`] = `
Object {
  "children": "some text",
}
`;

exports[`bbCodesMap bbCodesMapNames array should match expected snapshot 1`] = `
Array [
  "b",
  "i",
  "u",
  "s",
  "offtopic",
  "think",
  "color",
  "center",
  "left",
  "right",
  "size",
  "code",
  "spoiler",
  "quote",
  "email",
  "url",
  "img",
  "ol",
  "ul",
  "li",
  "p",
  "br",
  "textline",
  "root",
]
`;
